[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promethean"
version = "0.0.2"
authors = [
    { name = "古镇天Gugle", email = "gugle@st.xatu.edu.cn" },
]
description = "Friends are fate, always cherish. To our friendship, cheers!"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.8.4",
    "loguru>=0.7.0",
    "uvicorn>=0.22.0",
    "fastapi>=0.97.0"
]

[project.urls]
"Homepage" = "https://github.com/Bailu-Studios/Promethean"
